syntax = "proto3";

package authService;

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Logout (LogoutRequest) returns (LogoutResponse) {}
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
    rpc ChangePassword (ChangePasswordReq) returns (ChangePasswordRes) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    int32 userId = 2;
}

message LogoutRequest {}

message LogoutResponse {
    string message = 1;
}

message GetUserRequest {}

message GetUserResponse {
    bool isTeacher = 1;
    bool isAdmin = 2;
    int32 id = 3;
    string firstName = 4;
    string lastName = 5;
    int32 accountId = 6;
}

message ChangePasswordReq {
    string oldPass = 1;
    string newPass = 2;
}

message ChangePasswordRes {}