syntax = "proto3";

package courseService;

service CourseService {
    rpc GetMyCourses(MyCoursesReq) returns (MyCoursesRes);
    rpc GeyMyPresences(MyPresencesReq) returns (MyPresencesRes);
}

message MyCoursesReq {}

message MyCoursesRes {
    repeated Course courses = 1;
}

message MyPresencesReq {
    int32 courseId = 1;
}

message MyPresencesRes {
    repeated Presence presences = 1;
}

message Presence {
    int32 id = 1;
    int32 rollCallId = 2;
    string timestamp = 3;
}

message Course {
    int32 id = 1;
    string name = 2;
}